<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="uk.co.mandilee.mymusic.NowPlaying">

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Display1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/now_playing"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/show_information_about_the_song_currently_playing_include_ability_to_pause_play_rewind_forward_etc"/>

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/classes_libraries_needed"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_player_nmediacontroller"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/artist_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artist_info"/>

        <Button
            android:id="@+id/find_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_music"/>
    </LinearLayout>

</LinearLayout>
